# FlowForge

./: Makefile  README.md  README.old.md  pyproject.toml  requirements.txt  setup.py
infrastructure/docker/: Dockerfile
scripts/: build_image.sh  deploy.sh
src/: main.py  process_batch.py
src/config/: settings.py
src/core/: processor.py  storage.py
src/orchestration/: pipeline.py
src/processors/: base.py  image_processor.py  ocr_processor.py
src/utils/: logging.py  validators.py
